Minor changes to StarDust wiki

--- a/docs/StarDust.wiki/1.3.md
+++ b/docs/StarDust.wiki/1.3.md
@@ -5,7 +5,7 @@ The project is intended to develop open source software for deployment in delive
 The services come in three layers corresponding to the three associated sub-projects which are:
 
 - HoLoTruth  
-  concerned the establishment and management of Higher Order LOgical Truth, providing Proof As A service.
+  concerned the establishment and management of Higher Order LOgical Truth, providing Proof As A Service.
 
 - HoLoMod  
   concerned with empirical and other models in HOL, with Smart Oracles.
