try linking to md file

--- a/docs/StarDust.wiki/1.1.1.md
+++ b/docs/StarDust.wiki/1.1.1.md
@@ -1,27 +1,2 @@
-
-### Hybrid Deductive Intelligence
-
-Think of this as a variant on _Artificial General Intelligence_ in the following ways:
-
-- hybrid,  
-  in lots of ways combining:  
-    - _meat_ and _machine_,
-    - _explicit propositional knowledge_ with _intuitive knowledge or capabilities_ embedded in deep neural nets
-    - _general foundational knowledge_, and highly specialised _domain specific knowledge_
-    - _intuitive inference_ by deep neural nets, with high level _heuristically guided search_
-
-- deductive  
-  a key aspect of the architectural perspective proposed is its engagement with a paradigm shift from data and computation to propositions and inference.  This is a key enabler for achieving trust and precision in systems whose effectiveness is underpinned by neural and other innovative information processing architectures. 
-
-- intelligence  
-  Contemporary advances in artificial intelligence are mainly oriented to low level perceptual or intuitive judgements, and the kind of knowledge that is built and exploited by neural net-like architectures in addressing these problems.
-  These are sometimes realised by supervised or unsupervised learning.
-  Even when supervised learning is used, the supervision is very basic, nothing like the kind of explanation or teaching which is normally considered essential for effective learning by our own brains of the kinds of material which are taught even in secondary let alone higher education.
-
-
-
-
-
-
-
- 
+context for StarDust
+====================
