--- a/docs/StarDust.wiki/1.1.2.md
+++ b/docs/StarDust.wiki/1.1.2.md
@@ -1,11 +1,27 @@
 
-### Universal Fulfilment
+### Hybrid Deductive Intelligence
 
-The idea is that everyone should be able to realise their own _true potential_, and that in the future, with the automation of the means of producing physical and intellectual goods, this will be almost completely realisable.
-The main limits in the realisation of universal fulfilment will be incompatibilities between the needs and desires of different individuals or groups.
+Think of this as a variant on _Artificial General Intelligence_ in the following ways:
 
-Not everyone will see this goal as sufficient, or even desirable.
-Putting aside for the moment those who doubt its desirability, and addressing those who consider it insufficient, their own desire for more (than universal fulfilment) will form a part of the notion of universal fulfilment (assuming their fulfilment depended upon it), and their greater ambitions will therefore be incorporated into the apparently lesser goal.
+- hybrid,  
+  in lots of ways combining:  
+    - _meat_ and _machine_,
+    - _explicit propositional knowledge_ with _intuitive knowledge or capabilities_ embedded in deep neural nets
+    - _general foundational knowledge_, and highly specialised _domain specific knowledge_
+    - _intuitive inference_ by deep neural nets, with high level _heuristically guided search_
 
-Thus, knowing that there will be many who would not feel personally fulfilled as a contributing member of a society with no greater ambition than its own well-being, we also consider as incorporated in this aim the attainment and progression of great questions like "what's it all about? Why are we here?".
+- deductive  
+  a key aspect of the architectural perspective proposed is its engagement with a paradigm shift from data and computation to propositions and inference.  This is a key enabler for achieving trust and precision in systems whose effectiveness is underpinned by neural and other innovative information processing architectures. 
 
+- intelligence  
+  Contemporary advances in artificial intelligence are mainly oriented to low level perceptual or intuitive judgements, and the kind of knowledge that is built and exploited by neural net-like architectures in addressing these problems.
+  These are sometimes realised by supervised or unsupervised learning.
+  Even when supervised learning is used, the supervision is very basic, nothing like the kind of explanation or teaching which is normally considered essential for effective learning by our own brains of the kinds of material which are taught even in secondary let alone higher education.
+
+
+
+
+
+
+
+ 
