minor wiki changes

--- a/docs/StarDust.wiki/1.md
+++ b/docs/StarDust.wiki/1.md
@@ -14,6 +14,8 @@ This general pattern is to present
 
 This StarDust repo provides the highest level view, gives a first indication of the role of the other three sub-projects and how they fit together, and addresses issues which do not naturally fit into any one of those sub-projects.
 
+At its highest level, Stardust is intended to be a substantial enterprise, independently of the three sub-projects, primarily as a philosophical exercise in "Cognitive Architecture".
+
 - [The Aims of StarDust](1.1)
 - [Philosophical Fundamentals](1.2)
 - [The Architecture](1.3)
