Fix Carnap apostrophy problem with soft link

--- a/wikibook/StarDust.tex
+++ b/wikibook/StarDust.tex
@@ -45,7 +45,7 @@ The whole is intended to be at once a kind of {\em synthetic philosophy} and {\e
 \subsection{Some Philosophical Background}\label{some-philosophical-background}
 \input{HoLoTruth.wiki/Some-Philosophical-Background}
 \subsection{What Carnap's Philosophy was not}\label{what-carnaps-philosophy-was-not}
-\input{HoLoTruth.wiki/What-Carnaps-Philosophy-was-not}
+\input{What-Carnaps-Philosophy-was-not}
 \subsection{The Problem and The Method}\label{the-problem-and-the-method}
 \input{HoLoTruth.wiki/The-Problem-and-The-Method}
 \subsubsection{Preliminary Discussion}\label{preliminary-discussion}
