--- a/wikibook/StarDust.tex
+++ b/wikibook/StarDust.tex
@@ -7,7 +7,7 @@
 
 This book has been constructed from the wikis of a small constellation of github hosted projects which together are intended to articulate an architecture for cosmically distributed cognition.
 
-It consists of four parts, each containing the content of the wiki of one of the four projects.
+It consists of five parts, each containing the content of the wiki of one of the four projects.
 The first provides the overarching vision, and is substantially futuristic and philosophical in character.
 The other parts address in greater detail three aspects under which the system can fruitfully be considered, and may through the greater detail be felt more concrete and closer to engineering than philosophy.
 
