Add SynEpis as submodule

--- a/wikibook/sdhead.tex
+++ b/wikibook/sdhead.tex
@@ -7,6 +7,7 @@
 \usepackage{type1cm}
 \usepackage{eso-pic}
 \usepackage{color}
+\usepackage[hashEnumerators]{markdown} % For direct .md inclusion
 \hypersetup{pdfauthor={Roger Bishop Jones}}
 \hypersetup{colorlinks=true, urlcolor=black, citecolor=black, filecolor=black, linkcolor=black}
 
